...

        let directories = [
            "AAA_First",
            "BBB_Second/SubfolderB1",
            "BBB_Second/SubfolderB2",
            "CCC_Third",
            "FolderA/SubfolderA1",
            "FolderA/SubfolderA2",
            "FolderB/SubfolderB1",
            "FolderB/SubfolderB2",
            "FolderC",
            "FolderD",
            "Projects2025/Quarterly/Q1",
...
